2010-01-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.m:
	* Source/CFArray.m:
	* Source/CFData.m:
	* Source/CFDate.m:
	* Source/CFError.m:
	* Source/CFString.m:
	* Source/CFURL.m: Adopt to GNU coding standards.

2010-01-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFDate.m:
	* Headers/CoreFoundation/CFDate.h: Initial CFDate implementation
	* Headers/CoreFoundation/CoreFoundation.h: Added CFDate.h and CFURL.h

2010-01-21 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/CFURL.m:
	* Headers/CoreFoundation/CFURL.h: Start implementing CFURL

2010-01-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.m:
	* Source/CFError.m: Correct missing CFRetain in copied objects.

2010-01-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFString.h: Include stdarg.h.
	* Headers/CoreFoundation/CoreFoundation.h:
	* Headers/CoreFoundation/CFError.h:
	* Source/CFError.m:
	* Source/GNUmakefile: Added CFError.

2010-01-17 Fred Kiefer <fredkiefer@gmx.de>

	* Headers/CoreFoundation/CFString.h: Correct return type of
	CFStringCreateExternalRepresentation.
	* Source/CFArray.m,
	* Source/CFDictionary.m,
	* Source/CFString.m,
	* Source/CFData.m: Implement soem missing or incorrect functions.

2010-01-17 Fred Kiefer <fredkiefer@gmx.de>

	* Headers/CoreFoundation/CFDictionary.h,
	* Headers/CoreFoundation/CFCharacterSet.h: Remove remaining
	includes of Foundation.h.
	* Source/CFDictionary.m: Adopt to this change by using type casts.
	* Source/CFString.m: Add include for NSArray.h.

2010-01-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.m: Implemented kCFAllocatorNull and kCFAllocatorMalloc.

2010-01-17 Fred Kiefer <fredkiefer@gmx.de>

	* Headers/CoreFoundation/CFBase.h,
	* Headers/CoreFoundation/CFArray.h,
	* Headers/CoreFoundation/CFData.h: Don't include Foundation,h, use
	abstract types instead.
	* Source/CFArray.m,
	* Source/CFData.m,
	* Source/CFString.m: Adopt to this change by using plenty of type